before live changes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="social-icons">
                 <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/cityengineersolarwala/reel/C4LW_WJvPQa/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/917607646823" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com/cityengineersolarwala/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/919170646823" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
             <button class="tab-button" onclick="showLocation(event, 'lucknow')">Lucknow</button>
             <button class="tab-button" onclick="showLocation(event, 'banda')">Banda</button>
             <button class="tab-button active" onclick="showLocation(event, 'baberu')">Baberu</button>
-            <button class="tab-button" onclick="showLocation(event, 'karwi')">Karwi</button>
+            <button class="tab-button" onclick="showLocation(event, 'karvi')">Karvi (Chitrakoot)</button>
         </div>
         <div class="projects">
             <div class="location-content">
@@ -201,14 +201,14 @@
                             <h3>Lucknow Head Office</h3>
                             <p><i class="fas fa-envelope"></i> cityengineersolarwala@gmail.com</p>
                             <p><i class="fas fa-phone"></i> +91-9170646823</p>
-                            <p><strong>Address:</strong> Gate No.2, in front of Naveen Mandi, Tindwari Road, Baberu, UP 210121</p>
+                            <p><strong>Address:</strong> Sarai Sahjaadi, Banthara Bazaar, Lucknow, Uttar Pradesh 226401</p>
                             <!--<div class="social-links">
-                                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                                <a href="https://www.instagram.com/cityengineersolarwala/reel/C4LW_WJvPQa/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            </div>-->
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                            <a href="https://www.instagram.com/cityengineersolarwala/reel/C4LW_WJvPQa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>-->
                         </div>
                         <div class="map-container">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3599.7339846559794!2d80.69169507522345!3d25.54723647748726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399cafff77ae8f75%3A0xad9561b16e8b14b3!2sCity%20Mantra!5e0!3m2!1sen!2sin!4v1753702611911!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d222.82636965746642!2d80.81421789766618!3d26.67338427543552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bf7e373494575%3A0x2d30110b7a4251b1!2sBanthara%20Bazar!5e0!3m2!1sen!2sin!4v1754411182760!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -222,9 +222,9 @@
                             <p><i class="fas fa-phone"></i> +91-9170646823</p>
                             <p><strong>Address:</strong> Gate No.2, in front of Naveen Mandi, Tindwari Road, Baberu, UP 210121</p>
                             <!--<div class="social-links">
-                                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                                <a href="https://www.instagram.com/cityengineersolarwala/reel/C4LW_WJvPQa/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            </div>-->
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                            <a href="https://www.instagram.com/cityengineersolarwala/reel/C4LW_WJvPQa/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>-->
                         </div>
                         <div class="map-container">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3599.7339846559794!2d80.69169507522345!3d25.54723647748726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399cafff77ae8f75%3A0xad9561b16e8b14b3!2sCity%20Mantra!5e0!3m2!1sen!2sin!4v1753702611911!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -237,34 +237,35 @@
                     <div class="contact-card">
                         <div class="contact-details">
                             <h3>Banda Branch</h3>
-                            <p><i class="fas fa-envelope"></i> bandaoffice@cityengineer.com</p>
-                            <p><i class="fas fa-phone"></i> +91-9876543210</p>
-                            <p><strong>Address:</strong> Near Station Road, Banda, UP 210001</p>
+                            <p><i class="fas fa-envelope"></i> cityengineersolarwala@gmail.com</p>
+                            <p><i class="fas fa-phone"></i> +91-9170646823</p>
+                            <p><strong>Address:</strong> City Enginner Solar Wala, Near to  din raat medical store chaudhari nagar Banda, Uttar Pradesh 210001</p>
                             <!--<div class="social-links">
-                                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </div>-->
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </div>-->
                         </div>
                         <div class="map-container">
-                            <iframe src="https://maps.google.com/maps?q=Banda%20UP&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1514.395894131098!2d80.33849204680773!3d25.476325010596987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ccf987285f6c3%3A0x745731cb87888903!2sDin%20raat%20medical%20store!5e0!3m2!1sen!2sin!4v1754411430246!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <!--<iframe src="https://maps.google.com/maps?q=Banda%20UP&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy"></iframe>-->
                         </div>
                     </div>
                 </div>
                 <!-- karvi Panel -->
-                <div class="location-panel" id="karwi">
+                <div class="location-panel" id="karvi">
                     <div class="contact-card">
                         <div class="contact-details">
-                            <h3>Karwi Branch</h3>
-                            <p><i class="fas fa-envelope"></i> bandaoffice@cityengineer.com</p>
-                            <p><i class="fas fa-phone"></i> +91-9876543210</p>
-                            <p><strong>Address:</strong> Near Station Road, Banda, UP 210001</p>
+                            <h3>Karvi (Chitrakoot) Branch</h3>
+                            <p><i class="fas fa-envelope"></i> cityengineersolarwala@gmail.com</p>
+                            <p><i class="fas fa-phone"></i> +91-9170646823</p>
+                            <p><strong>Address:</strong> City Enginner Solar Wala, In Front of H.D.F.C. Bank, Prayagraj Road , Karvi (Chitrakoot), Uttar Pradesh 210205 </p>
                             <!--<div class="social-links">
-                                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </div>-->
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </div>-->
                         </div>
                         <div class="map-container">
-                            <iframe src="https://maps.google.com/maps?q=Banda%20UP&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.6862293757526!2d80.91956337521204!3d25.213801877700256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3984af6a42bc2577%3A0xd489d134556b975b!2sHDFC%20Bank!5e0!3m2!1sen!2sin!4v1754411924198!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -288,7 +289,7 @@
     </footer>
 
     <div class="whatsapp-float">
-        <a href="https://wa.me/917607646823" target="_blank">
+        <a href="https://wa.me/919170646823" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
