--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Toll-Free Top Bar with Social Icons -->
-    <div class="tollfree-top-bar">
-        <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: auto;">
-            <div>
-                <i class="fas fa-headset"></i> Toll-Free: <strong class="tollfree-number">033-690-28678</strong>
-            </div>
-            <div class="social-icons">
-                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/cityengineersolarwala/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/919170646823" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            </div>
+   <!-- Toll-Free Top Bar with Social Icons -->
+<div class="tollfree-top-bar">
+    <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: auto;">
+        <div>
+            <i class="fas fa-headset"></i> Toll-Free: <strong class="tollfree-number"><a href="tel:03369028678" style="color: inherit; text-decoration: none;">033-690-28678</a></strong>
+        </div>
+        <div class="social-icons">
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/cityengineersolarwala/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/919170646823" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
     </div>
+</div>
 
     <header>
         <div class="logo">
@@ -366,3 +366,4 @@
 
 </body>
 </html>
+
