--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fas fa-headset"></i> Toll-Free: <strong class="tollfree-number"><a href="tel:03369028678" style="color: inherit; text-decoration: none;">033-690-28678</a></strong>
         </div>
         <div class="social-icons">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/city-engineer-solar-wala-6b903b379/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/cityengineersolarwala/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://wa.me/919170646823" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -366,4 +366,5 @@
 
 </body>
 </html>
+
 
